[package]
name = "fintools"
version = "0.1.0"
edition = "2024"
authors = ["Orlyn Gerano <orlyn_gerano@yahoo.com>"]
description = "Financial tools for web applications using WebAssembly"
license = "MIT/Apache-2.0"
repository = "https://github.com/orlyngerano/fintools"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.100"
